--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <h2>The Adani Crisis</h2>
     <p>Adani,Adani,Adani.It's all everyone talks about!Here's our spin on it. Feb 13, 2023</p>
-    <p><img src="https://img.freepik.com/premium-photo/stock-market-forex-trading-graph-graphic-concept_73426-104.jpg?w=2000" alt="Image"></p>
+    <p><img src="https://media.warriortrading.com/2019/08/shutterstock_775889491.jpg" alt="Image"></p>
     <p>As we all know,A few days ago The Adani Group's stock prices fell,and several shareholders,including Gautam 
      Adani himself,who lost half of his net worth.For reference,Adani was worth an estimated $126.4 billion and the third-richest person in the world.
      Now,Adani's net worth has dropped to $56.4 billion on Bloomberg Billionaire Index from $120 billion two weeks ago.
