--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       max-height: 600px;
      }
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6593362288424158"
+     crossorigin="anonymous"></script>
   </head>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-MZMCBZEKNZ"></script>
